# autoinference

./: .gitignore  PUBLISH.md  README.md  autoinference.go  go.mod
.claude/: settings.local.json
helm-chart/: .helmignore  Chart.yaml  README.md  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
mcp-skill/: .npmignore  LICENSE  README.md  package-lock.json  package.json
node/: README.md  index.js  package.json
python/: README.md  pyproject.toml
python/src/autoinference/: __init__.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
