[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoinference"
version = "0.0.1"
description = "Placeholder for the autoinference library. Work in progress."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "autoinference", email = "stephenn.fernandes@gmail.com" }]
keywords = ["autoinference", "inference", "ml", "ai"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/autoinference/autoinference"
Repository = "https://github.com/autoinference/autoinference"
Issues = "https://github.com/autoinference/autoinference/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/autoinference"]
